@@ -24,6 +24,9 @@
 	used index-based dispatch for enums
 	added Type.enumIndex
 	fixed enum.toString for Flash and JS
+	support for -Dnetwork-sandbox
+	trim -cp and -resource
+	various genas3 fixes
 
 2007-08-29: 1.15
 	fixed bug with Enum.construct when Enum have type parameters
